--- a/CommonLibProject/CommonUtils/src/main/AndroidManifest.xml
+++ b/CommonLibProject/CommonUtils/src/main/AndroidManifest.xml
@@ -1,8 +1,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 
-    package="com.github.evan.common_utils">
+    package="com.github.evan.common_utils"
+    android:versionCode="001"
+    android:versionName="v0.0.1">
 
-    <application android:allowBackup="true" android:label="@string/app_name"
+    <uses-sdk
+        android:minSdkVersion="15"
+        android:targetSdkVersion="26" />
+
+    <application
+        android:allowBackup="true"
+        android:label="@string/app_name"
         android:supportsRtl="true">
 
     </application>
