--- a/CommonLibProject/CommonUtilsDemo/src/main/AndroidManifest.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/AndroidManifest.xml
@@ -14,6 +14,14 @@
         </activity>
 
         <activity android:name=".ui.activity.TestActivity"/>
+        <activity android:name=".ui.activity.ptrActivity.PtrWithViewActivity"/>
+        <activity android:name=".ui.activity.ptrActivity.PtrWithViewGroupActivity"/>
+        <activity android:name=".ui.activity.ptrActivity.PtrWithListViewActivity"/>
+        <activity android:name=".ui.activity.ptrActivity.PtrWithGridViewActivity"/>
+        <activity android:name=".ui.activity.ptrActivity.PtrWithRecyclerViewActivity"/>
+        <activity android:name=".ui.activity.ptrActivity.PtrWithViewPagerActivity"/>
+        <activity android:name=".ui.activity.ptrActivity.PtrWithScrollViewActivity"/>
+
         <activity android:name=".ui.activity.ptrActivity.ClassicIndicatorActivity"/>
         <activity android:name=".ui.activity.ptrActivity.ClassicProIndicatorActivity"/>
         <activity android:name=".ui.activity.ptrActivity.GifIndicatorActivity"/>
