--- a/CommonLibProject/CommonUtils/src/main/AndroidManifest.xml
+++ b/CommonLibProject/CommonUtils/src/main/AndroidManifest.xml
@@ -8,6 +8,10 @@
         android:minSdkVersion="15"
         android:targetSdkVersion="26" />
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
