--- a/CommonLibProject/CommonUtilsDemo/build.gradle
+++ b/CommonLibProject/CommonUtilsDemo/build.gradle
@@ -33,5 +33,6 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.8.1'
     apt 'com.jakewharton:butterknife-compiler:8.8.1'
     compile 'com.android.support:gridlayout-v7:26.0.0-alpha1'
+    compile 'com.github.bumptech.glide:glide:3.6.1'
     compile project(':CommonUtils')
 }
