--- a/CommonLibProject/CommonUtilsDemo/src/main/AndroidManifest.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.github.evan.common_utils_demo">
 
-    <application android:name=".MyApplication" android:allowBackup="true" android:icon="@mipmap/ic_launcher"
+    <application android:name=".MyApplication" android:allowBackup="true" android:icon="@mipmap/logo"
         android:label="@string/app_name" android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true" android:theme="@style/AppTheme">
         <activity android:name=".ui.activity.MainActivity">
