--- a/CommonLibProject/CommonUtils/build.gradle
+++ b/CommonLibProject/CommonUtils/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support:design:26.0.0-alpha1'
     compile 'com.android.support:cardview-v7:26.0.0-alpha1'
+    compile 'com.squareup.okhttp3:okhttp:3.9.1'
 }
