--- a/CommonLibProject/CommonUtilsDemo/src/main/AndroidManifest.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/AndroidManifest.xml
@@ -21,11 +21,11 @@
         <activity android:name=".ui.activity.ptrActivity.PtrWithRecyclerViewActivity"/>
         <activity android:name=".ui.activity.ptrActivity.PtrWithViewPagerActivity"/>
         <activity android:name=".ui.activity.ptrActivity.PtrWithScrollViewActivity"/>
-
         <activity android:name=".ui.activity.ptrActivity.PtrWithClassicIndicatorActivity"/>
         <activity android:name=".ui.activity.ptrActivity.PtrWithClassicProIndicatorActivity"/>
         <activity android:name=".ui.activity.ptrActivity.PtrWithGifIndicatorActivity"/>
         <activity android:name=".ui.activity.ptrActivity.PtrWithLargeImageIndicatorActivity"/>
+        <activity android:name=".ui.activity.mediaControllerActivity.CommonMediaControllerActivity"/>
     </application>
 
 </manifest>
