--- a/CommonLibProject/CommonUtils/build.gradle
+++ b/CommonLibProject/CommonUtils/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.android.support:design:26.0.0-alpha1'
     compile 'com.android.support:cardview-v7:26.0.0-alpha1'
     compile 'com.squareup.okhttp3:okhttp:3.9.1'
+    compile 'com.google.zxing:core:3.3.1'
 }
