--- a/CommonLibProject/CommonUtils/src/main/AndroidManifest.xml
+++ b/CommonLibProject/CommonUtils/src/main/AndroidManifest.xml
@@ -11,11 +11,16 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-feature android:name="android.hardware.camera" android:required="true"/>
+    <uses-feature android:name="android.hardware.camera.autofocus" android:required="false"/>
 
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true">
+
+        <activity android:name=".ui.activity.QRCodeActivity" android:screenOrientation="portrait"/>
 
     </application>
 
