--- a/CommonLibProject/CommonUtilsDemo/src/main/AndroidManifest.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".ui.activity.ptrActivity.PtrWithLargeImageIndicatorActivity"/>
         <activity android:name=".ui.activity.mediaControllerActivity.CommonMediaControllerActivity"/>
         <activity android:name=".ui.activity.slideExitActivity.SlideExitDemoActivity" android:theme="@style/AppCompatLightNoActionBarTransparentActivity"/>
+        <activity android:name=".ui.activity.slideExitActivity.MultiNestingDemoActivity" android:theme="@style/AppCompatLightNoActionBarTransparentActivity"/>
     </application>
 
 </manifest>
