--- a/CommonLibProject/CommonUtils/src/main/AndroidManifest.xml
+++ b/CommonLibProject/CommonUtils/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:minSdkVersion="15"
         android:targetSdkVersion="26" />
 
-    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
@@ -18,8 +18,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
-    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -36,6 +36,8 @@
         <activity
             android:name=".ui.activity.QRCodeActivity"
             android:screenOrientation="portrait" />
+
+        <activity android:name=".ui.activity.SinglePhotoActivity" />
 
     </application>
 
