--- a/CommonLibProject/CommonUtilsDemo/build.gradle
+++ b/CommonLibProject/CommonUtilsDemo/build.gradle
@@ -34,5 +34,6 @@ dependencies {
     apt 'com.jakewharton:butterknife-compiler:8.8.1'
     compile 'com.android.support:gridlayout-v7:26.0.0-alpha1'
     compile 'com.github.bumptech.glide:glide:3.6.1'
+    compile 'org.greenrobot:eventbus:3.0.0'
     compile project(':CommonUtils')
 }
