--- a/CommonLibProject/CommonUtilsDemo/src/main/AndroidManifest.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/AndroidManifest.xml
@@ -34,6 +34,9 @@
         <activity android:name=".ui.activity.slideExitActivity.SlideExitDemoActivity" android:theme="@style/AppCompatLightNoActionBarTransparentActivity"/>
         <activity android:name=".ui.activity.slideExitActivity.MultiNestingDemoActivity" android:theme="@style/AppCompatLightNoActionBarTransparentActivity"/>
         <activity android:name=".ui.activity.SwitchFragmentActivity"/>
+        <activity android:name=".ui.activity.aboutActivity.LifeCycleActivity"/>
+        <activity android:name=".ui.activity.aboutActivity.ActivityA"/>
+        <activity android:name=".ui.activity.aboutActivity.ActivityB"/>
     </application>
 
 </manifest>
