--- a/CommonLibProject/CommonUtilsDemo/src/main/AndroidManifest.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/AndroidManifest.xml
@@ -42,6 +42,12 @@
         <activity android:name=".ui.activity.aboutActivity.ExtrasInformationSingleTopActivity" android:launchMode="singleTop"/>
         <activity android:name=".ui.activity.aboutActivity.ExtrasInformationSingleInstanceActivity" android:launchMode="singleInstance"/>
         <activity android:name=".ui.activity.aboutActivity.ExtrasInformationSingleTaskActivity" android:launchMode="singleTask"/>
+        <activity android:name=".ui.activity.aboutActivity.SchemeJumpActivity"/>
+        <activity android:name=".ui.activity.RedirectUiActivity">
+            <intent-filter>
+                <action android:name="@string/redirect_ui_action"/>
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
