--- a/CommonLibProject/CommonUtilsDemo/src/main/AndroidManifest.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/AndroidManifest.xml
@@ -42,12 +42,18 @@
         <activity android:name=".ui.activity.aboutActivity.ExtrasInformationSingleTopActivity" android:launchMode="singleTop"/>
         <activity android:name=".ui.activity.aboutActivity.ExtrasInformationSingleInstanceActivity" android:launchMode="singleInstance"/>
         <activity android:name=".ui.activity.aboutActivity.ExtrasInformationSingleTaskActivity" android:launchMode="singleTask"/>
+        <activity android:name=".ui.activity.aboutService.ServiceLifeCycleActivity"/>
         <activity android:name=".ui.activity.aboutActivity.SchemeJumpActivity"/>
+        <activity android:name=".ui.activity.aboutService.StartServiceActivity"/>
+        <activity android:name=".ui.activity.aboutService.BindServiceActivity"/>
         <activity android:name=".ui.activity.RedirectUiActivity">
             <intent-filter>
                 <action android:name="@string/redirect_ui_action"/>
             </intent-filter>
         </activity>
+
+        <service android:name=".service.ServiceA"/>
+
     </application>
 
 </manifest>
