--- a/CommonLibProject/CommonUtilsDemo/src/main/AndroidManifest.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/AndroidManifest.xml
@@ -46,6 +46,7 @@
         <activity android:name=".ui.activity.aboutActivity.SchemeJumpActivity"/>
         <activity android:name=".ui.activity.aboutService.StartServiceActivity"/>
         <activity android:name=".ui.activity.aboutService.BindServiceActivity"/>
+        <activity android:name=".ui.activity.aboutService.IntentServiceActivity"/>
         <activity android:name=".ui.activity.RedirectUiActivity">
             <intent-filter>
                 <action android:name="@string/redirect_ui_action"/>
@@ -53,6 +54,7 @@
         </activity>
 
         <service android:name=".service.ServiceA"/>
+        <service android:name=".service.DemoIntentService"/>
 
     </application>
 
