提交线程池相关

--- a/CommonLibProject/CommonUtilsDemo/src/main/AndroidManifest.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/AndroidManifest.xml
@@ -47,6 +47,7 @@
         <activity android:name=".ui.activity.aboutService.StartServiceActivity"/>
         <activity android:name=".ui.activity.aboutService.BindServiceActivity"/>
         <activity android:name=".ui.activity.aboutService.IntentServiceActivity"/>
+        <activity android:name=".ui.activity.aboutThread.AboutThreadPoolActivity"/>
         <activity android:name=".ui.activity.RedirectUiActivity">
             <intent-filter>
                 <action android:name="@string/redirect_ui_action"/>
