--- a/CommonLibProject/CommonUtilsDemo/src/main/AndroidManifest.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/AndroidManifest.xml
@@ -48,6 +48,7 @@
         <activity android:name=".ui.activity.aboutService.BindServiceActivity"/>
         <activity android:name=".ui.activity.aboutService.IntentServiceActivity"/>
         <activity android:name=".ui.activity.aboutThread.AboutThreadPoolActivity"/>
+        <activity android:name=".ui.activity.BrowserActivity"/>
         <activity android:name=".ui.activity.RedirectUiActivity">
             <intent-filter>
                 <action android:name="@string/redirect_ui_action"/>
