--- a/CommonLibProject/CommonUtilsDemo/src/main/AndroidManifest.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/AndroidManifest.xml
@@ -52,6 +52,10 @@
         <activity android:name=".ui.activity.aboutDesignMode.SingletonActivity"/>
         <activity android:name=".ui.activity.aboutDesignMode.ObserverActivity"/>
         <activity android:name=".ui.activity.aboutDesignMode.AboutFactoryActivity"/>
+        <activity android:name=".ui.activity.aboutDataSave.SharedPreferenceActivity"/>
+        <activity android:name=".ui.activity.aboutDataSave.SQLiteActivity"/>
+        <activity android:name=".ui.activity.aboutDataSave.ContentProviderActivity"/>
+        <activity android:name=".ui.activity.aboutDataSave.FileActivity"/>
         <activity android:name=".ui.activity.RedirectUiActivity">
             <intent-filter>
                 <action android:name="@string/redirect_ui_action"/>
