--- a/CommonLibProject/CommonUtilsDemo/src/main/AndroidManifest.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/AndroidManifest.xml
@@ -56,6 +56,8 @@
         <activity android:name=".ui.activity.aboutDataSave.SQLiteActivity"/>
         <activity android:name=".ui.activity.aboutDataSave.ContentProviderActivity"/>
         <activity android:name=".ui.activity.aboutDataSave.FileActivity"/>
+        <activity android:name=".ui.activity.aboutAnimation.TweenAnimationActivity"/>
+        <activity android:name=".ui.activity.aboutAnimation.ObjectAnimatorActivity"/>
         <activity android:name=".ui.activity.RedirectUiActivity">
             <intent-filter>
                 <action android:name="@string/redirect_ui_action"/>
