--- a/CommonLibProject/CommonUtils/build.gradle
+++ b/CommonLibProject/CommonUtils/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:26.0.0-alpha1'
     compile 'com.squareup.okhttp3:okhttp:3.9.1'
     compile 'com.google.zxing:core:3.3.1'
+    compile 'org.greenrobot:eventbus:3.0.0'
 }
