--- a/CommonLibProject/CommonUtils/build.gradle
+++ b/CommonLibProject/CommonUtils/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.9.1'
     compile 'com.google.zxing:core:3.3.1'
     compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
