更新约束布局

--- a/CommonLibProject/CommonUtilsDemo/src/main/AndroidManifest.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/AndroidManifest.xml
@@ -65,6 +65,7 @@
         <activity android:name=".ui.activity.aboutViewGroup.TableLayoutActivity"/>
         <activity android:name=".ui.activity.aboutViewGroup.GridLayoutActivity"/>
         <activity android:name=".ui.activity.aboutViewGroup.AbsoluteLayoutActivity"/>
+        <activity android:name=".ui.activity.aboutViewGroup.ConstraintLayoutActivity"/>
         <activity android:name=".ui.activity.RedirectUiActivity">
             <intent-filter>
                 <action android:name="@string/redirect_ui_action"/>
