--- a/CommonLibProject/CommonUtilsDemo/src/main/AndroidManifest.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/AndroidManifest.xml
@@ -66,6 +66,7 @@
         <activity android:name=".ui.activity.aboutViewGroup.GridLayoutActivity"/>
         <activity android:name=".ui.activity.aboutViewGroup.AbsoluteLayoutActivity"/>
         <activity android:name=".ui.activity.aboutViewGroup.ConstraintLayoutActivity"/>
+        <activity android:name=".ui.activity.aboutCache.LRUCacheActivity"/>
         <activity android:name=".ui.activity.RedirectUiActivity">
             <intent-filter>
                 <action android:name="@string/redirect_ui_action"/>
