--- a/CommonLibProject/CommonUtilsDemo/build.gradle
+++ b/CommonLibProject/CommonUtilsDemo/build.gradle
@@ -23,6 +23,8 @@ android {
     }
 }
 
+repositories { flatDir { dirs 'libs' } }
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -35,4 +37,5 @@ dependencies {
     compile 'com.android.support:gridlayout-v7:26.0.0-alpha1'
     compile 'com.github.bumptech.glide:glide:3.6.1'
     compile project(':CommonUtils')
+    compile(name:'constraintlayout-1.1.3', ext:'aar')
 }
