--- a/CommonLibProject/CommonUtilsDemo/src/main/AndroidManifest.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/AndroidManifest.xml
@@ -68,6 +68,7 @@
         <activity android:name=".ui.activity.aboutViewGroup.ConstraintLayoutActivity"/>
         <activity android:name=".ui.activity.aboutCache.LRUCacheActivity"/>
         <activity android:name=".ui.activity.aboutCache.BitmapCacheActivity"/>
+        <activity android:name=".ui.activity.aboutMedia.MediaPlayerActivity"/>
         <activity android:name=".ui.activity.RedirectUiActivity">
             <intent-filter>
                 <action android:name="@string/redirect_ui_action"/>
